# kaggle_petfinder_pipeline

./: build.py  pyproject.toml  script_template.py  setup.py
.github/workflows/: upload.yml
petfinder_pipeline/: main.py  utils.py
